<resources>
    <string name="app_name">Tuck Player</string>
    <string name="recents">Recents</string>
    <string name="_90_s_classics">90\'s Classics</string>
    <string name="todo">TODO</string>
    <string name="title_activity_play_song_download">PlaySongDownload</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_play_song_downloaded">PlaySongDownloaded</string>
    <string name="title_activity_play_from_downloads">play_from_downloads</string>
    <string name="latest_songs">Latest Songs</string>
    <string name="appsole">TODO</string>
    <string name="maroon5">TODO</string>
    <string name="coldplay">TODO</string>
    <string name="download">download</string>
    <string name="diamonds">diamonds</string>
    <string name="fireball">fireball</string>
    <string name="info">info</string>
    <string name="previous_">previous</string>
    <string name="play">play</string>
    <string name="next_">next</string>
    <string name="image">image</string>
    <string name="loop">loop</string>
</resources>