<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/recents"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="380dp"
        android:layout_height="199dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/maroon5"
                app:srcCompat="@drawable/maroon5"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/coldplay_viva_la_vida"
                tools:ignore="SpeakableTextPresentCheck"
                android:contentDescription="@string/coldplay" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/diamonds"
                app:srcCompat="@drawable/rihanna_diamonds_cover" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:text="@string/latest_songs"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="1.0" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="380dp"
        android:layout_height="199dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/katy_perry_dark_horse"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="219dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/appsole"
                app:srcCompat="@drawable/applause_cover"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/fireball"
                app:srcCompat="@drawable/fireball" />

        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/download"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:contentDescription="@string/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        app:srcCompat="@drawable/ic_baseline_cloud_download_24" />

    <ImageView
        android:id="@+id/info"
        android:layout_width="51dp"
        android:layout_height="40dp"
        android:contentDescription="@string/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toEndOf="@+id/download"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        app:srcCompat="@drawable/ic_baseline_info_24" />

</androidx.constraintlayout.widget.ConstraintLayout>